--- a/main.html
+++ b/main.html
@@ -8,13 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	
+	<div id=text>
+		Welcome to the world of web development
+	</div>
 
 
     <script type="text/javascript" src="./script.js">
 </script>
-	<div id="text"> Welcome to the world of Web development </div>
-
+	
 </body>
 
 </html>
